# kea_soft_systems_integration

./: .gitignore  README.md
+exam/: wiseflow_handin.odt
01._Introduction/: paymentiframe.html
02._Text-based_Data_Files/: me.csv  me.json  me.txt  me.xml  me.yaml
05._Python_Virtual_Environments/: main.py
13._Server-sent_event/02._python/: main.py  pyproject.toml
13._Server-sent_event/02._python/templates/: index.html  index.js
17._Database_Migrations/: docker-compose.yaml
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js
23._Embedded_Youtube/: embededYoutube.html
24._Git_Hooks/: main.js  pre-commit
assignments/01a-03a._Data_parsing_server/python/: parser_router.py  pyproject.toml  requests_router.py  xml_parser.py  yaml_parser.py
assignments/01a-03a._Data_parsing_server/python/files/: evee.yaml
assignments/01a._Data_parsing_server_part1/python/parser/: pyproject.toml
assignments/01a._Data_parsing_server_part1/python/parser/parser/: csv_parser.py  json_parser.py  main.py  pokemon.py  txt_parser.py  xml_parser.py  yaml_parser.py
assignments/01a._Data_parsing_server_part1/python/parser/parser/files/: bulbasaur.csv  squirtle.json
assignments/01a._Data_parsing_server_part1/python/web/: main.py  pyproject.toml
mandatories/: mandatory_I.md
yaak/: yaak.fl_7J8wSTZrFG.yaml  yaak.fl_CQwzasPYKp.yaml  yaak.fl_VHUv65Kefr.yaml  yaak.fl_aoo9Kg7btE.yaml  yaak.fl_cuKh3n9fgQ.yaml  yaak.fl_cyMCvXpfkd.yaml  yaak.fl_dqRAA93XNa.yaml  yaak.fl_vBb3DXY4o5.yaml  yaak.fl_vGLNo8GLbJ.yaml  yaak.rq_4CJ3SZpDeX.yaml  yaak.rq_5zKKx9pRyo.yaml  yaak.rq_7NsyCV9oye.yaml  yaak.rq_7pfW6CMvCm.yaml  yaak.rq_8hZ9ikRSgM.yaml  yaak.rq_DWXkcskyxW.yaml  yaak.rq_EuPePbg94k.yaml  (+11 more)
(+307 files in other folders)
