[tool.poetry]
name = "02-python"
version = "0.1.0"
description = ""
authors = ["doro-hd <doro-hd@protonmail.com>"]
readme = "README.md"
packages = [{include = "02"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
