[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["doro-hd <doro-hd@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
parser = {path = "../parser"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
